--- a/src/app/initiative-tracker/cur-hp-modal/cur-hp-modal.component.scss
+++ b/src/app/initiative-tracker/cur-hp-modal/cur-hp-modal.component.scss
@@ -5,7 +5,6 @@
         height: 100%;
         font-size: 32px;
     }
-
     .col-fifth {
         -webkit-box-flex: 0;
         -ms-flex: 0 0 20%;
@@ -13,5 +12,10 @@
         max-width: 20%;
         padding-left: 10px;
         padding-right: 10px;
+    }
+    .hp-input {
+        height: 100%;
+        font-size: 32px;
+        text-align: center;
     }
 }
