--- a/src/app/initiative-tracker/initiative-list/initiative-list.component.scss
+++ b/src/app/initiative-tracker/initiative-list/initiative-list.component.scss
@@ -2,18 +2,20 @@
 @import "~bootstrap/scss/bootstrap.scss";
 @import "../../../styles/buttons.scss";
 
-.initiative {
+.initiative {  
     margin-bottom: 0;
-
     .row {
         line-height: 2.5;
     }
-
     .header {
         border-bottom: 1px solid $brand-primary;
         font-size: 14px;
         font-weight: bold;
         text-transform: uppercase;
+    }
+
+    .col-name {
+        font-weight: bold;
     }
 
     .col-active,
@@ -22,30 +24,12 @@
         text-align: center;
         button {
             line-height: 1.5;
-            width: 60%;
+            width: 40%;
         }
     }
-
-    .notes {
-        .note-title {
-            font-weight: bold;
-            font-style: italic;
-        }
-
-        .creature-notes {
-            display: inline-block !important;
-
-            .inline-edit {
-                font-size: 80% !important;
-                margin-bottom: 14px;
-            }
-        }
-    }
-
     .col-initiative {
         text-align: center;
     }
-
     .body,
     .footer {
         .col-remove {
@@ -54,12 +38,10 @@
             line-height: 1.6;
         }
     }
-
     .active {
         background: rgba($brand-primary, 0.7) !important;
         color: white;
     }
-
     .disabled {
         background: #eee;
         color: grey;
@@ -70,7 +52,7 @@
     .initiative {
         .body {
             .col-hp button {
-                width: 100%;
+                width: 45%;
             }
         }
         .footer {
