--- a/src/app/shared/inline-edit/inline-edit.component.html
+++ b/src/app/shared/inline-edit/inline-edit.component.html
@@ -1,12 +1,15 @@
-<div>
-  <div *ngIf="editing">
-    <input #inlineEditControl class="form-control" [required]="required" (blur)="onBlur($event)" (keydown.enter)="onBlur($event)"
-      [name]="value" [(ngModel)]="preValue" [type]="type" [placeholder]="label" />
-  </div>
-  <div *ngIf="!editing">
-    <label class="edit" title="Click to edit" (click)="edit(value)" (focus)="edit(value);" tabindex="0" class="inline-edit">
-      <ng-template [ngIf]="!value"><span class="text-muted">{{label}}</span></ng-template>
+<div class="form-group row">
+  <label class="col-2 col-form-label" *ngIf="label">{{label}}</label>
+  <div [ngClass]="getLabelClasses()">
+    <div *ngIf="editing">
+      <input #inlineEditControl class="form-control" [required]="required" (blur)="onBlur($event)" (keydown.enter)="onBlur($event)"
+        [name]="value" [(ngModel)]="preValue" [type]="type" [placeholder]="placeholder" />
+    </div>
+    <div *ngIf="!editing">
+      <p class="form-control-static" title="Click to edit" (click)="edit(value)" (focus)="edit(value);" tabindex="0">
+        <ng-template [ngIf]="!value"><span class="placeholder">{{placeholder}}</span></ng-template>
         {{value}}&nbsp;
-      </label>
+      </p>
+    </div>
   </div>
 </div>
