--- a/src/app/initiative-tracker/initiative-header/initiative-header.component.html
+++ b/src/app/initiative-tracker/initiative-header/initiative-header.component.html
@@ -20,8 +20,8 @@
     </div>
     <div class="col-md-3 col-6 level">
       <div class="attribute-block">
-        <button class="btn btn-lg btn-primary btn-icon" (click)="nextClick.emit(null)"><i class="mdi mdi-play"></i> Next</button>
-        <button class="btn btn-lg btn-primary btn-bottom-right" (click)="nextClick.emit(null)"><i class="mdi mdi-play"></i><span class="sr-only">Next</span></button>
+        <button class="btn btn-lg btn-primary btn-round" (click)="backClick.emit(null)"><i class="mdi mdi-step-backward"></i><span class="sr-only">Back</span></button>
+        <button class="btn btn-lg btn-primary btn-round" (click)="nextClick.emit(null)"><i class="mdi mdi-step-forward"></i><span class="sr-only">Next</span></button>
       </div>
     </div>
   </div>
