Put reset button back on the right.

--- a/src/app/initiative-tracker/initiative-tracker.component.html
+++ b/src/app/initiative-tracker/initiative-tracker.component.html
@@ -1,7 +1,9 @@
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
     <h1>Initiative Tracker</h1>
-    <button type="button" class="btn btn-primary btn-lg" (click)="onResetClick()">Reset Tracker</button>
+    <div class="text-right">
+      <button type="button" class="btn btn-primary btn-lg" (click)="onResetClick()">Reset Tracker</button>
+    </div>
   </div>
 </div>
 <div class="container">
